--- a/index.html
+++ b/index.html
@@ -98,6 +98,35 @@
 
   <tbody>
 
+<tr>
+    <td width="33%" valign="top" align="center"><img src="files/intror.png" alt="sym" width="90%" style="border-style: none"></a>
+    </td><td width="67%" valign="top">
+      <p><a id="MICCAI21">
+      <img src="files/new.png" alt="[NEW]" width="6%" style="border-style: none">
+      <heading>Interactive Smoothing Parameter Optimizationin DBT Reconstruction using Deep learning</heading></a>
+      <br><strong>Pranjal Sahu</strong>, Hailiang Huang, Wei Zhao, and Hong Qin<br>
+      </p>
+
+      <div class="paper" id="lightweightnodule2020">
+      <a href="javascript:toggleblock(&#39;largeScaleCuriosity2020_abs&#39;)">abstract</a> |
+      <em><br>MICCAI</em>, 2021<br>
+
+      <p align="justify"> <i id="MICCAI21_abs" style="display: none;">Medical image reconstruction algorithms such as PenalizedWeighted Least Squares (PWLS) typically rely on a good choice of tuningparameters such as the number of iterations, the strength of regularizar,etc. However, obtaining a good estimate of such parameters is often doneusing trial and error methods. This process is very time consuming andlaborious  especially  for  high  resolution  images.  To  solve  this  problemwe  propose  an  interactive  framework.  We  focus  on  the  regularizationparameter and train a CNN to imitate its impact on image for varyingvalues. The trained CNN can be used by a human practitioner to tunethe regularization strength on-the-fly as per the requirements. Taking theexample of Digital Breast Tomosynthesis reconstruction, we demonstratethe feasibility of our approach and also discuss the future applicationsof  this  interactive  reconstruction  approach.  We  also  test  the  proposedmethodology on public Walnut and Lodopab CT reconstruction datasetsto show it can be generalized to CT reconstruction as well..</i></p>
+
+<pre xml:space="preserve" style="display: none;">@article{9122557,
+  author={P. {Sahu} and H. {Huang} and W. {Zhao} and H. {Qin}},
+  journal={MICCAI}, 
+  title={Interactive Smoothing Parameter Optimizationin DBT Reconstruction using Deep learning}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={1-1}
+</pre>
+
+      </div>
+    </td>
+  </tr>
+
 
 <tr>
     <td width="33%" valign="top" align="center"><img src="files/intror.png" alt="sym" width="90%" style="border-style: none"></a>
