--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <tbody>
 
 <tr>
-    <td width="33%" valign="top" align="center"><img src="files/intror.png" alt="sym" width="90%" style="border-style: none"></a>
+    <td width="33%" valign="top" align="center"><img src="files/unet2.png" alt="sym" width="90%" style="border-style: none"></a>
     </td><td width="67%" valign="top">
       <p><a id="MICCAI21">
       <img src="files/new.png" alt="[NEW]" width="6%" style="border-style: none">
