--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <tbody><tr>
     <td width="60%" valign="middle" align="justify">
-    <p>I am a PhD candidate in Computer Science working under <a href="http://www3.cs.stonybrook.edu/~qin/">Dr. Hong Qin</a> at Stony Brook University. My research focus 
+    <p>I did my PhD in Computer Science under the guidance of <a href="http://www3.cs.stonybrook.edu/~qin/">Dr. Hong Qin</a> at Stony Brook University. My research focus 
       is on Deep Learning applications in the field of Biomedical Imaging. Some of the problems which I work on include image classification, projection de-noising, volume reconstruction etc. I did my summer internship at <a href="https://www.siemens-healthineers.com/en-us/">Siemens Healthineers</a>, Malvern in 2019 and 2020 where I worked on pathological lung volume segmentation from CT scans.
     <br/>    <br/>
     I did my Bachelors (Hons) in Computer Science from <a href="http://cse.iitkgp.ac.in/">IIT Kharagpur</a> in 2013 and later gained experience in software development working in startups for 3 years.
