--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <a href="allpdfs/CV.pdf"> CV </a> |
     </a><a href="https://scholar.google.com/citations?user=W0LtyTkAAAAJ&hl=en&amp;hl=en&amp;oi=ao">Google Scholar</a> | <a href="https://github.com/PranjalSahu">Github</a> | <a href="https://twitter.com/pranjalsahu"> Twitter </a> | 
     <a href="https://www.linkedin.com/in/pranjal-sahu-89a3a623"> LinkedIn </a> |
-    <a href="https://www.researchgate.net/profile/Pranjal_Sahu3"> ResearchGate </a>
+    <a href="https://www.researchgate.net/profile/Pranjal_Sahu3"> ResearchGate </a> |
+    <a href="https://www.proquest.com/openview/c52b41bc37a2716120d083aaa6090e69/1.pdf?pq-origsite=gscholar&cbl=18750&diss=y"> <PhD Thesis </a>
     
     </p>
     </td>
