--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
     <b>Email</b>:
     <font id="email" style="display:inline;">psahu@cs.stonybrook.edu </font>
 <br></br>
-<!-- <p align="center"><font size="3">"I am not young enough to know everything." -Oscar Wilde</font><br>
   </p><table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"> -->
   
 
@@ -212,17 +211,24 @@ driven application directly into practitioner\92s hand.</i></p>
       <div class="paper" id="lightweightnodule2020">
       <a href="javascript:toggleblock(&#39;MICCAI21_abs&#39;)">abstract</a>
       <em><br>Medical Image Computing and Computer Assisted Intervention, MICCAI</em>, 2021<br>
-      <p align="justify"> <i id="MICCAI21_abs" style="display: none;">Medical image reconstruction algorithms such as PenalizedWeighted Least Squares (PWLS) typically rely on a good choice of tuningparameters such as the number of iterations, the strength of regularizar,etc. However, obtaining a good estimate of such parameters is often doneusing trial and error methods. This process is very time consuming andlaborious  especially  for  high  resolution  images.  To  solve  this  problemwe  propose  an  interactive  framework.  We  focus  on  the  regularizationparameter and train a CNN to imitate its impact on image for varyingvalues. The trained CNN can be used by a human practitioner to tunethe regularization strength on-the-fly as per the requirements. Taking theexample of Digital Breast Tomosynthesis reconstruction, we demonstratethe feasibility of our approach and also discuss the future applicationsof  this  interactive  reconstruction  approach.  We  also  test  the  proposedmethodology on public Walnut and Lodopab CT reconstruction datasetsto show it can be generalized to CT reconstruction as well..</i></p>
+      <p align="justify"> <i id="MICCAI21_abs" style="display: none;">Medical image reconstruction algorithms such as PenalizedWeighted Least Squares (PWLS) 
+        typically rely on a good choice of tuningparameters such as the number of iterations, the strength of regularizar,etc. 
+        However, obtaining a good estimate of such parameters is often doneusing trial and error methods. 
+        This process is very time consuming andlaborious  especially  for  high  resolution  images.  
+        To  solve  this  problemwe  propose  an  interactive  framework.  We  focus  on  the  regularizationparameter and train a CNN to imitate its 
+        impact on image for varyingvalues. The trained CNN can be used by a human practitioner to tunethe regularization strength on-the-fly as per the requirements. 
+        Taking theexample of Digital Breast Tomosynthesis reconstruction, we demonstrate the feasibility of our approach and 
+        also discuss the future applications of  this  interactive  reconstruction  approach.  We  also  test  the  proposed methodology 
+        on public Walnut and Lodopab CT reconstruction datasetsto show it can be generalized to CT reconstruction as well.</i></p>
 
-<pre xml:space="preserve" style="display: none;">@article{9122557,
-  author={P. {Sahu} and H. {Huang} and W. {Zhao} and H. {Qin}},
-  journal={MICCAI}, 
-  title={Interactive Smoothing Parameter Optimizationin DBT Reconstruction using Deep learning}, 
+<pre xml:space="preserve" style="display: none;">@inproceedings{sahu2021interactive,
+  title={Interactive Smoothing Parameter Optimization in DBT Reconstruction Using Deep Learning},
+  author={Sahu, Pranjal and Huang, Hailiang and Zhao, Wei and Qin, Hong},
+  booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  pages={57--67},
   year={2021},
-  volume={},
-  number={},
-  pages={1-1}
-</pre>
+  organization={Springer}
+}
 
       </div>
     </td>
