--- a/index.html
+++ b/index.html
@@ -208,8 +208,10 @@ driven application directly into practitioner\92s hand.</i></p>
       <br><strong>Pranjal Sahu</strong>, Hailiang Huang, Wei Zhao, and Hong Qin<br>
       </p>
 
-      <div class="paper" id="lightweightnodule2020">
-      <a href="javascript:toggleblock(&#39;MICCAI21_abs&#39;)">abstract</a>
+      <div class="paper" id="miccai_abs2021">
+      <a href="javascript:toggleblock(&#39;MICCAI21_abs&#39;)">abstract</a> |
+      <a href="https://www.researchgate.net/publication/354787910_Interactive_Smoothing_Parameter_Optimization_in_DBT_Reconstruction_Using_Deep_Learning">pdf</a> |
+      <a shape="rect" href="javascript:togglebib(&#39;miccai_abs2021&#39;)" class="togglebib">bibtex</a>
       <em><br>Medical Image Computing and Computer Assisted Intervention, MICCAI</em>, 2021<br>
       <p align="justify"> <i id="MICCAI21_abs" style="display: none;">Medical image reconstruction algorithms such as PenalizedWeighted Least Squares (PWLS) 
         typically rely on a good choice of tuningparameters such as the number of iterations, the strength of regularizar,etc. 
@@ -246,25 +248,18 @@ driven application directly into practitioner\92s hand.</i></p>
 <div class="paper" id="infocom2020">
       <a href="javascript:toggleblock(&#39;infocom2020a&#39;)">abstract</a> |
       <a href="https://www.researchgate.net/publication/339114778_Streaming_360-Degree_Videos_Using_Super-Resolution">pdf</a> |
-      <a shape="rect" href="javascript:togglebib(&#39;infocom2020&#39;)" class="togglebib">bibtex</a>
+      <a shape="rect" href="javascript:togglebib(&#39;infocom2020a&#39;)" class="togglebib">bibtex</a>
       <br><em>INFOCOM,</em> 2020 <br>
 
       <p align="justify"> <i id="infocom2020a" style="display: none;">360 degree videos provide an immersive experience to users, but require considerably more bandwidth to stream compared to regular videos. State-of-the-art 360 \BF video streaming systems use viewport prediction to reduce bandwidth requirement , that involves predicting which part of the video the user will view and only fetching that content. However, viewport prediction is error prone resulting in poor user Quality of Experience (QoE). We design PARSEC, a 360 \BF video streaming system that reduces bandwidth requirement while improving video quality. PARSEC trades off bandwidth for additional client-side computation to achieve its goals. PARSEC uses an approach based on super-resolution, where the video is significantly compressed at the server and the client runs a deep learning model to enhance the video to a much higher quality. PARSEC addresses a set of challenges associated with using super-resolution for 360 \BF video streaming: large deep learning models, slow inference rate, and variance in the quality of the enhanced videos. To this end, PAR-SEC trains small micro-models over shorter video segments, and then combines traditional video encoding with super-resolution techniques to overcome the challenges. We evaluate PARSEC on a real WiFi network, over a broadband network trace released by FCC, and over a 4G/LTE network trace. PARSEC significantly outperforms the state-of-art 360 \BF video streaming systems while reducing the bandwidth requirement.</i></p>
 <pre xml:space="preserve" style="display: none;">
-@inproceedings{duan2020scatter,
-  title={Scatter correction with deep learning
-  approach for contrast enhanced digital
-  breast tomosynthesis (CEDBT) in both
-  cranio-caudal (CC) view and mediolateral oblique (MLO) view},
-  author={Duan, Xiaoyu and Sahu, Pranjal and
-  Huang, Hailiang and Zhao, Wei},
-  booktitle={15th International Workshop
-  on Breast Imaging (IWBI2020)},
-  volume={11513},
-  pages={115130Q},
+@inproceedings{dasari2020streaming,
+  title={Streaming 360-degree videos using super-resolution},
+  author={Dasari, Mallesham and Bhattacharya, Arani and Vargas, Santiago and Sahu, Pranjal and Balasubramanian, Aruna and Das, Samir R},
+  booktitle={IEEE INFOCOM 2020-IEEE Conference on Computer Communications},
+  pages={1977--1986},
   year={2020},
-  organization={International Society
-  for Optics and Photonics}
+  organization={IEEE}
 }
 </div>
 
