--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <b>Email</b>:
     <font id="email" style="display:inline;">psahu@cs.stonybrook.edu </font>
 <br></br>
-  </p><table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"> -->
+  </p><table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
   
 
   <tbody><tr>
