--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@ driven application directly into practitioner\92s hand.</i></p>
 <pre xml:space="preserve" style="display: none;">
 @inproceedings{dasari2020streaming,
   title={Streaming 360-degree videos using super-resolution},
-  author={Dasari, Mallesham and Bhattacharya, Arani and Vargas, Santiago and Sahu, Pranjal and Balasubramanian, Aruna and Das, Samir R},
+  author={Dasari, Mallesham and Bhattacharya, Arani and Vargas, Santiago and Sahu, Pranjal and 
+  Balasubramanian, Aruna and Das, Samir R},
   booktitle={IEEE INFOCOM 2020-IEEE Conference on Computer Communications},
   pages={1977--1986},
   year={2020},
