--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@ driven application directly into practitioner\92s hand.</i></p>
     <td width="33%" valign="top" align="center"><img src="files/rsna1.jpg" alt="sym" width="100%" style="border-style: none"></a>
     </td><td width="67%" valign="top">
       <p><a id="rsna19">
-      <heading>Scatter correction with deep learning approach for contrast enhanced digital breast tomosynthesis (CEDBT) in both cranio-caudal (CC) view and mediolateral oblique (MLO) view</heading>
+      <heading>Scatter correction with deep learning approach for contrast enhanced digital breast tomosynthesis (CEDBT) 
+        in both cranio-caudal (CC) view and mediolateral oblique (MLO) view</heading>
       </a>      <br>Xiaoyu Duan, <strong>Pranjal Sahu</strong>, Hailiang Huang, Wei Zhao<br>
       </p>
 
@@ -494,7 +495,7 @@ the experimental facility.</i></p>
     </td>
   </tr> -->
 
-  <tr>
+  <!-- <tr>
     <td width="33%" valign="top" align="center"><a ><img src="files/protein.png" alt="sym" width="80%" border="1" style="border-color:black"></a>
     </td><td width="67%" valign="top">
       <p><a id="SHREC17">
@@ -509,7 +510,7 @@ the experimental facility.</i></p>
       <a shape="rect" href="javascript:togglebib(&#39;iclr18&#39;)" class="togglebib">bibtex</a> 
       <br>
       <em>Eurographics Workshop on 3D Object Retrieval</em>, 2017<br>
-      <p align="justify"> <i id="iclr18_abs" style="display: none;">The large number of protein structures deposited in the protein database provide an opportunity to examine the structure relations using computational algorithms, which can be used to classify the structures based on shape similarity. In this paper, we report the result of the SHREC 2017 track on shape retrievals from protein database. The goal of this track is to test the performance of the algorithms proposed by participants for the retrieval of bioshape (proteins). The test set is composed of 5,854 abstracted shapes from actual protein structures after removing model redundancy. Ten query shapes were selected from a set of representative molecules that have important biological functions. Six methods from four teams were evaluated and the performance is summarized in this report, in which both the retrieval accuracy and computational speed were compared. The biological relevance of the shape retrieval approaches is discussed. We also discussed the future perspectives of shape retrieval for biological molecular models.</i></p>
+      <p align="justify"> <i id="iclr18_abs" style="display: none;">The large number of protein structures deposited in the protein database provide an opportunity to examine the structure relations using computational algorithms, which can be used to classify the structures based on shape similarity. In this paper, we report the result of the SHREC 2017 track on shape retrievals from protein database. The goal of this track is to test the performance of the algorithms proposed by participants for the retrieval of bioshape (proteins). The test set is composed of 5,854 abstracted shapes from actual protein structures after removing model redundancy. Ten query shapes were selected from a set of representative molecules that have important biological functions. Six methods from four teams were evaluated and the performance is summarized in this report, in which both the retrieval accuracy and computational speed were compared. The biological relevance of the shape retrieval approaches is discussed. We also discussed the future perspectives of shape retrieval for biological molecular models.</i></p> -->
 
 
 
