--- a/index.html
+++ b/index.html
@@ -199,6 +199,43 @@ driven application directly into practitioner\92s hand.</i></p>
 </tbody></table>
 <table width="60%" align="center" border="0" cellspacing="0" cellpadding="20">
 
+  <tr>
+    <td width="33%" valign="top" align="center"><img src="files/ipmi_supp_temp1.png" alt="sym" width="90%" style="border-style: none"></a>
+    </td><td width="67%" valign="top">
+      <p><a id="BMVC21">
+      <img src="files/new.png" alt="[NEW]" width="6%" style="border-style: none">
+      <heading>Stabilized Semi-Supervised Training for COVID Lesion Segmentation</heading></a>
+      <br><strong>Pranjal Sahu</strong>, Vunnava Saikiran Kumar, and Hong Qin<br>
+      </p>
+
+      <div class="paper" id="bmvc_abs2021">
+      <a href="javascript:toggleblock(&#39;BMVC21_abs&#39;)">abstract</a> |
+      <a href="https://www.researchgate.net/publication/355480443_Stabilized_Semi-Supervised_Training_for_COVID_Lesion_Segmentation">pdf</a> |
+      <a shape="rect" href="javascript:togglebib(&#39;miccai_abs2021&#39;)" class="togglebib">bibtex</a>
+      <em><br>The British Machine Vision Conference, BMVC</em>, 2021<br>
+      <p align="justify"> <i id="BMVC21_abs" style="display: none;">We propose a novel stabilized semi-supervised training method to solve the 
+        challenging problem of covid lesion segmentation in CT scans. We first study the limitations 
+        of current models and based on our findings we introduce a lightweight SU-Net (Small U-Net) architecture. 
+        During training we feed the CT scans in sorted order of lesion occupancy and calculate a reliability 
+        score at each epoch to determine the stopping criteria. We test the proposed method on the largest publicly 
+        available COVID CT dataset called MOSMED dataset. By harnessing around 800 un-labelled COVID CT volumes 
+        comprising 25k CT slices, we improve the segmentation accuracy by around 2-4 dice percentage points depending 
+        upon the availability of labelled training data. We also compare our method with a recently published COVID 
+        lesion segmentation method called Semi-InfNet. The proposed method outperforms Semi-InfNet model and achieves 
+        state-of-the-art covid segmentation result on MOSMED dataset.</i></p>
+
+<pre xml:space="preserve" style="display: none;">@inproceedings{sahu2021interactive,
+  title={Interactive Smoothing Parameter Optimization in DBT Reconstruction Using Deep Learning},
+  author={Sahu, Pranjal and Kumar, Vunnava Saikiran and Qin, Hong},
+  booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  year={2021}
+}
+
+      </div>
+    </td>
+  </tr>
+
+
 <tr>
     <td width="33%" valign="top" align="center"><img src="files/ipmi_supp_temp1.png" alt="sym" width="90%" style="border-style: none"></a>
     </td><td width="67%" valign="top">
