--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ driven application directly into practitioner\92s hand.</i></p>
       <div class="paper" id="bmvc_abs2021">
       <a href="javascript:toggleblock(&#39;BMVC21_abs&#39;)">abstract</a> |
       <a href="https://www.researchgate.net/publication/355480443_Stabilized_Semi-Supervised_Training_for_COVID_Lesion_Segmentation">pdf</a> |
-      <a shape="rect" href="javascript:togglebib(&#39;miccai_abs2021&#39;)" class="togglebib">bibtex</a>
+      <a shape="rect" href="javascript:togglebib(&#39;bmvc_abs2021&#39;)" class="togglebib">bibtex</a>
       <em><br>The British Machine Vision Conference, BMVC</em>, 2021<br>
       <p align="justify"> <i id="BMVC21_abs" style="display: none;">We propose a novel stabilized semi-supervised training method to solve the 
         challenging problem of covid lesion segmentation in CT scans. We first study the limitations 
