--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ driven application directly into practitioner\92s hand.</i></p>
 <table width="60%" align="center" border="0" cellspacing="0" cellpadding="20">
 
   <tr>
-    <td width="33%" valign="top" align="center"><img src="files/ipmi_supp_temp1.png" alt="sym" width="90%" style="border-style: none"></a>
+    <td width="33%" valign="top" align="center"><img src="files/bmvc4.png" alt="sym" width="90%" style="border-style: none"></a>
     </td><td width="67%" valign="top">
       <p><a id="BMVC21">
       <img src="files/new.png" alt="[NEW]" width="6%" style="border-style: none">
