--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
     I was fortunate to take Computer Vision and Computer Graphics courses under <a href="http://www.iitkgp.ac.in/department/EE/faculty/ee-rajiv">Dr. Rajiv Ranjan Sahay</a> and <a href="http://www.facweb.iitkgp.ac.in/~jay/">Dr. Jayanta Mukhopadhyay</a>  at IIT Kharagpur which motivated me to pursue PhD in this field. 
     I am active on Twitter where I regularly share interesting blog posts and resources related to Deep Learning, Computer Vision, Computer Graphics and Optimization.
     <br/> <br/>
-     <h1 style="font-size:1.05vw">I defended my PhD thesis in May 2021 and will be joining Kitware as Senior R&D Engineer in Carrboro, NC. </h1>
-    <!--Any student planning to apply for graduate studies in USA,  can contact me for any queries. I would be happy to help! -->
+     <h1 style="font-size:1.05vw">I am currently a Senior Research Scientist at Siemens Healthineers Princeton NJ. </h1>
     </a><p align="center"><a>
     <a href="allpdfs/CV.pdf"> CV </a> |
     </a><a href="https://scholar.google.com/citations?user=W0LtyTkAAAAJ&hl=en&amp;hl=en&amp;oi=ao">Google Scholar</a> | <a href="https://github.com/PranjalSahu">Github</a> | <a href="https://twitter.com/pranjalsahu"> Twitter </a> | 
